add CORS info, update logos for quality

--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -77,4 +77,4 @@ npm run test:e2e
 ## Tips
 
 -   When running your JHipster backend locally for Android, make sure to run `adb reverse tcp:8080 tcp:8080` so the app can communicate with your backend.
--   When running your JHipster backend in production, make sure to enable CORS in your backend's `src/main/resources/config/application-prod.yml` file.
+-   When running your JHipster backend on Web, make sure to enable CORS in your backend's `src/main/resources/config/application-*.yml` files.
