--- a/generators/entity/templates/entity-edit-screen.js.ejs
+++ b/generators/entity/templates/entity-edit-screen.js.ejs
@@ -123,7 +123,7 @@ function <%= context.entityNameCapitalized %>EditScreen(props) {
     if (updating === false) {
       if (errorUpdating) {
         setError(errorUpdating && errorUpdating.detail ? errorUpdating.detail : 'Something went wrong updating the entity');
-      } else {
+      } else if (updateSuccess) {
         setError('');
         isNewEntity ? navigation.replace('<%= context.entityNameCapitalized %>Detail', { entityId: <%= context.entityInstance %>?.id }) : navigation.pop();
       }
