null check for content-type header (some other blueprints doesn't have this header)

--- a/generators/app/templates/app/shared/sagas/account.sagas.js.ejs
+++ b/generators/app/templates/app/shared/sagas/account.sagas.js.ejs
@@ -8,7 +8,7 @@ export function * getAccount (api) {
   const response = yield call(api.getAccount)
 
   // success?
-  if (response.ok && response.headers['content-type'].indexOf('json') !== -1) {
+  if (response.ok && response.headers['content-type']?.indexOf('json') !== -1) {
     console.log('Account - OK')
     yield put(AccountActions.accountSuccess(response.data))
   } else {
