--- a/generators/app/templates/app/modules/login/login.sagas.js.ejs
+++ b/generators/app/templates/app/modules/login/login.sagas.js.ejs
@@ -10,11 +10,12 @@ import WebsocketService from '../../shared/websockets/websocket.service'
 <%_ } _%>
 <%_ if (context.authenticationType === 'oauth2') { _%>
 import AuthInfoActions from '../../shared/reducers/auth-info.reducer';
-import { doOauthPkceFlow } from './login.utils';
+import { doOauthPkceFlow, logoutFromIdp } from './login.utils';
 <%_ } _%>
 
 <%_ if (context.authenticationType === 'oauth2') { _%>
 export const selectAuthInfo = (state) => state.authInfo.authInfo;
+export const selectIdToken = (state) => state.login.idToken;
 <%_ } _%>
 export const selectAuthToken = (state) => state.login.authToken
 // attempts to login
@@ -26,10 +27,10 @@ export function * login (api) {
       yield put(AuthInfoActions.authInfoRequest());
     }
     const { issuer, clientId } = authInfo;
-    const { accessToken } = yield call(doOauthPkceFlow, AppConfig.oktaClientId || clientId, issuer);
+    const { accessToken, idToken } = yield call(doOauthPkceFlow, AppConfig.oktaClientId || clientId, issuer);
     if (accessToken) {
       yield call(api.setAuthToken, accessToken);
-      yield put(LoginActions.loginSuccess(accessToken));
+      yield put(LoginActions.loginSuccess(accessToken, idToken));
       yield put(AccountActions.accountRequest());
       yield put({ type: 'RELOGIN_OK' });
     }
@@ -73,6 +74,11 @@ export function * logout (api) {
   yield call(api.removeAuthToken)
   yield put(AccountActions.accountReset())
   yield put(AccountActions.accountRequest())
+  <%_ if (context.authenticationType === 'oauth2') { _%>
+  const { clientId, issuer } = yield select(selectAuthInfo);
+  const idToken = yield select(selectIdToken);
+  yield call(logoutFromIdp, AppConfig.oktaClientId || clientId, issuer, idToken);
+  <%_ } _%>
   yield put(LoginActions.logoutSuccess())
   yield put({ type: 'RELOGIN_ABORT' })
 }
