--- a/generators/entity/templates/entity-detail-screen.js.ejs
+++ b/generators/entity/templates/entity-detail-screen.js.ejs
@@ -24,6 +24,7 @@ function <%= context.entityNameCapitalized %>DetailScreen(props) {
       if (!routeEntityId) {
         navigation.navigate('<%= context.entityNameCapitalized %>');
       } else {
+        setDeleteModalVisible(false);
         get<%= context.entityNameCapitalized %>(routeEntityId);
       }
     }, [routeEntityId, get<%= context.entityNameCapitalized %>, navigation]),
