fix detox e2e tests
update scrollview matcher to match expo version
wait then tap button for delete modal

--- a/generators/entity/templates/entity-e2e-test.js.ejs
+++ b/generators/entity/templates/entity-e2e-test.js.ejs
@@ -208,7 +208,7 @@ describe('<%= context.entityNameCapitalized %> Screen Tests', () => {
 
     // delete
     await scrollTo('<%= context.entityInstance %>DeleteButton', '<%= context.entityInstance %>DetailScrollView')
-    await tapFirstElementByLabel('<%= context.entityNameCapitalized %> Delete Button');
+    await waitThenTapButton('<%= context.entityInstance %>DeleteButton');
     await waitForElementToBeVisibleById('<%= context.entityInstance %>DeleteModal');
     await waitThenTapButton('deleteButton')
     await waitForElementToBeVisibleById('<%= context.entityInstance %>Screen');
