replace detox-expo-helpers npm github version with scoped package

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -89,7 +89,7 @@
     <%_ } _%>
     <%_ if (context.detox) { _%>
     "detox": "REPLACE_WITH_VERSION",
-    "detox-expo-helpers": "REPLACE_WITH_VERSION",
+    "@ruddell/detox-expo-helpers": "REPLACE_WITH_VERSION",
     "expo-detox-hook": "REPLACE_WITH_VERSION",
     "jest-circus": "REPLACE_WITH_VERSION",
     <%_ } _%>
