--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -54,6 +54,7 @@
     "@react-native-async-storage/async-storage": "EXPO_REPLACE_WITH_VERSION",
     "react-native-gesture-handler": "EXPO_REPLACE_WITH_VERSION",
     "react-native-reanimated": "EXPO_REPLACE_WITH_VERSION",
+    "react-native-safe-area-context": "EXPO_REPLACE_WITH_VERSION",
     "react-native-screens": "EXPO_REPLACE_WITH_VERSION",
     "react-native-web": "EXPO_REPLACE_WITH_VERSION",
     "@expo/vector-icons": "EXPO_REPLACE_WITH_VERSION",
