--- a/generators/app/templates/app/modules/login/login.sagas.js.ejs
+++ b/generators/app/templates/app/modules/login/login.sagas.js.ejs
@@ -27,7 +27,7 @@ export function * login (api) {
       yield put(AuthInfoActions.authInfoRequest());
     }
     const { issuer, clientId } = authInfo;
-    const { accessToken, idToken } = yield call(doOauthPkceFlow, AppConfig.oktaClientId || clientId, issuer);
+    const { accessToken, idToken } = yield call(doOauthPkceFlow, AppConfig.nativeClientId || clientId, issuer);
     if (accessToken) {
       yield call(api.setAuthToken, accessToken);
       yield put(LoginActions.loginSuccess(accessToken, idToken));
@@ -78,7 +78,9 @@ export function * logout (api) {
   <%_ if (context.authenticationType === 'oauth2') { _%>
   const { clientId, issuer } = yield select(selectAuthInfo);
   const idToken = yield select(selectIdToken);
-  yield call(logoutFromIdp, AppConfig.oktaClientId || clientId, issuer, idToken);
+  if (idToken) {
+    yield call(logoutFromIdp, AppConfig.nativeClientId || clientId, issuer, idToken);
+  }
   <%_ } _%>
   yield put({ type: 'RELOGIN_ABORT' })
 }
