--- a/generators/app/templates/app/shared/sagas/auth-info.saga.js.ejs
+++ b/generators/app/templates/app/shared/sagas/auth-info.saga.js.ejs
@@ -5,6 +5,9 @@ import AuthInfoActions from '../reducers/auth-info.reducer';
 export function* getAuthInfo(api) {
   const authInfo = yield call(api.getOauthInfo);
   if (authInfo.ok) {
+    if (authInfo.data.issuer && authInfo.data.issuer.endsWith('/')) {
+      authInfo.data.issuer = authInfo.data.issuer.substring(0, authInfo.data.issuer.length - 1);
+    }
     yield put(AuthInfoActions.authInfoSuccess(authInfo.data));
   } else {
     let errorMessage = authInfo.data && authInfo.data.detail ? authInfo.data.detail : 'Failed to reach backend API';
