--- a/generators/app/templates/app/modules/login/login.utils.ts.ejs
+++ b/generators/app/templates/app/modules/login/login.utils.ts.ejs
@@ -5,6 +5,8 @@ import { buildQueryString } from 'expo-auth-session/src/QueryParams';
 import { Platform } from 'react-native';
 import * as WebBrowser from 'expo-web-browser';
 import * as Linking from 'expo-linking';
+import AppConfig from '../../config/app-config';
+
 WebBrowser.maybeCompleteAuthSession();
 
 interface AuthParams {
@@ -67,7 +69,7 @@ export async function getDiscovery(issuer: string): Promise<DiscoveryDocument> {
 
 export async function doOauthPkceFlow(clientId: string, issuer: string): Promise<AuthSession.TokenResponse> {
   // whether or not to use the expo proxy
-  const useProxy = Platform.select({ web: false, default: true });
+  const useProxy = Platform.select({ web: false, default: AppConfig.useExpoAuthProxy });
   // set up redirect uri
   const redirectUri = makeRedirectUri({ useProxy });
   // fetch oauth issuer information from discovery endpoint
@@ -83,13 +85,14 @@ export async function doOauthPkceFlow(clientId: string, issuer: string): Promise
 }
 
 export async function logoutFromIdp(clientId: string, issuer: string, idToken: string) {
-  if (Platform.OS === 'web') {
+  // logging out of IDP is not supported by the expo auth proxy
+  if (Platform.OS === 'web' || !AppConfig.useExpoAuthProxy) {
     const discovery = await getDiscovery(issuer);
     const { endSessionEndpoint } = discovery;
     // whether or not to use the expo proxy
-    const useProxy = Platform.select({ web: false, default: true });
+    const useProxy = Platform.select({ web: false, default: AppConfig.useExpoAuthProxy });
     // set up redirect uri
     const redirectUri = makeRedirectUri({ useProxy });
-    window.location.href = `${endSessionEndpoint}?id_token_hint=${idToken}&client_id=${clientId}&post_logout_redirect_uri=${redirectUri}`;
+    await WebBrowser.openAuthSessionAsync(`${endSessionEndpoint}?id_token_hint=${idToken}&client_id=${clientId}&post_logout_redirect_uri=${redirectUri}`, redirectUri);
   }
 }
