do not save authInfo to localstorage, always fetch

--- a/generators/app/templates/app/config/redux-persist.js.ejs
+++ b/generators/app/templates/app/config/redux-persist.js.ejs
@@ -8,7 +8,7 @@ const REDUX_PERSIST = {
   storeConfig: {
     key: 'primary',
     storage: AsyncStorage,
-    blacklist: ['appState'], // reducer keys that you do NOT want stored to persistence here
+    blacklist: ['appState', 'authInfo'], // reducer keys that you do NOT want stored to persistence here
     // whitelist: [], Optionally, just specify the keys you DO want stored to
     // persistence. An empty array means 'don't store any reducers' -> infinitered/ignite#409
     transforms: [immutablePersistenceTransform]
