--- a/generators/app/templates/app/config/app-config.js.ejs
+++ b/generators/app/templates/app/config/app-config.js.ejs
@@ -1,3 +1,4 @@
+import { Platform } from 'react-native';
 import Constants from 'expo-constants';
 
 // load extra config from the app.json file
@@ -9,8 +10,8 @@ export default {
   <%_ if (context.authenticationType === 'oauth2') { _%>
   // leave blank if using Keycloak
   nativeClientId: '',
-  // use expo auth proxy with login, disable to log completely out of oauth provider
-  useExpoAuthProxy: true,
+  // use expo auth proxy with login, disable to enable logout completely from oauth provider
+  useExpoAuthProxy: Platform.select({ web: false, default: true }),
   <%_ } _%>
   // use fixtures instead of real API requests
   useFixtures: false,
