--- a/generators/app/templates/app/modules/login/login.utils.ts.ejs
+++ b/generators/app/templates/app/modules/login/login.utils.ts.ejs
@@ -86,8 +86,10 @@ export async function logoutFromIdp(clientId: string, issuer: string, idToken: s
   if (!AppConfig.useExpoAuthProxy) {
     const discovery = await getDiscovery(issuer);
     const { endSessionEndpoint } = discovery;
-    // set up redirect uri
-    const redirectUri = makeRedirectUri({ useProxy: AppConfig.useExpoAuthProxy });
-    await WebBrowser.openAuthSessionAsync(`${endSessionEndpoint}?id_token_hint=${idToken}&client_id=${clientId}&post_logout_redirect_uri=${redirectUri}`, redirectUri);
+    if (endSessionEndpoint) {
+      // set up redirect uri
+      const redirectUri = makeRedirectUri({ useProxy: AppConfig.useExpoAuthProxy });
+      await WebBrowser.openAuthSessionAsync(`${endSessionEndpoint}?id_token_hint=${idToken}&client_id=${clientId}&post_logout_redirect_uri=${redirectUri}`, redirectUri);
+    }
   }
 }
