add conditions around oauth-specific code

--- a/generators/app/templates/app/config/app-config.js.ejs
+++ b/generators/app/templates/app/config/app-config.js.ejs
@@ -1,4 +1,6 @@
+<%_ if (context.authenticationType === 'oauth2') { _%>
 import { Platform } from 'react-native';
+<%_ } _%>
 import Constants from 'expo-constants';
 
 // load extra config from the app.json file
