add missing peer dependencies for expo build:web

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -101,7 +101,10 @@
     "typescript": "REPLACE_WITH_VERSION",
     "rimraf": "REPLACE_WITH_VERSION",
     "jest-expo": "EXPO_REPLACE_WITH_VERSION",
-    "@expo/webpack-config": "EXPO_REPLACE_WITH_VERSION"
+    "@expo/webpack-config": "EXPO_REPLACE_WITH_VERSION",
+    "path-exists": "REPLACE_WITH_VERSION",
+    "resolve": "REPLACE_WITH_VERSION",
+    "tapable": "REPLACE_WITH_VERSION"
   },
   <%_ if (!context.skipCommitHook) { _%>
   "lint-staged": {
