Fix logout with Auth0

--- a/generators/app/templates/app/modules/login/login.utils.ts.ejs
+++ b/generators/app/templates/app/modules/login/login.utils.ts.ejs
@@ -90,6 +90,10 @@ export async function logoutFromIdp(clientId: string, issuer: string, idToken: s
       // set up redirect uri
       const redirectUri = makeRedirectUri({ useProxy: AppConfig.useExpoAuthProxy });
       await WebBrowser.openAuthSessionAsync(`${endSessionEndpoint}?id_token_hint=${idToken}&client_id=${clientId}&post_logout_redirect_uri=${redirectUri}`, redirectUri);
+    } else if (issuer.includes('auth0.com')) {
+      // Auth0 need special handling since end_session_endpoint is not in oidc-configuration
+      const redirectUri = makeRedirectUri({ useProxy: AppConfig.useExpoAuthProxy });
+      await WebBrowser.openAuthSessionAsync(`${issuer}/v2/logout?client_id=${clientId}&returnTo=${redirectUri}`, redirectUri);
     }
   }
 }
