--- a/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
@@ -6,6 +6,7 @@ import AppSwitchInput from './inputs/jhi-switch-input';
 import AppListInput from './inputs/jhi-list-input';
 import AppMultiListInput from './inputs/jhi-multi-list-input';
 import AppDateInput from './inputs/jhi-date-input';
+import AppImageInput from './inputs/jhi-image-input';
 import { StyleSheet, Text } from 'react-native';
 import ApplicationStyles from '../../themes/application.styles';
 
@@ -35,6 +36,10 @@ export default React.forwardRef((props, ref) => {
   if (inputType === 'number' && (typeof values[name]).toLowerCase() === 'number') {
     // number values have to be strings
     values[name] = String(values[name]);
+  }
+  if (inputType === 'image-base64' || inputType === 'image') {
+    // number values have to be strings
+    // values[name] = String(values[name]);
   }
 
   const hasError = errors[name] && touched[name];
@@ -102,6 +107,17 @@ export default React.forwardRef((props, ref) => {
           inputType={inputType}
           value={values[name]}
           selected={values[name]}
+          onChange={(value) => setFieldValue(name, value)}
+          onBlur={() => setFieldTouched(name)}
+          error={hasError}
+          {...otherProps}
+        />
+      )}
+      {(inputType === 'image-base64' || inputType === 'image') && (
+        <AppImageInput
+          ref={ref}
+          inputType={inputType}
+          value={values[name]}
           onChange={(value) => setFieldValue(name, value)}
           onBlur={() => setFieldTouched(name)}
           error={hasError}
