Fix jest preset

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -140,7 +140,7 @@
       "/storybook/",
       "/*\\.story\\.js"
     ],
-    "preset": "react-native"
+    "preset": "jest-expo"
   },
   "engines": {
     "node": ">=12.x",
