--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -7,10 +7,14 @@
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
     "test": "jest",
-    "publish": "expo publish",
-    "build:ios": "expo build:ios",
-    "build:android": "expo build:android",
-    "build:web": "expo build:web",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "prepublish": "eas update:configure",
+    "publish": "eas update --auto"
+    "build:ios": "eas build -p ios",
+    "build:android": "eas build -p android",
+    "build:web": "expo export:web",
     <%_ if (!context.skipCommitHook) { _%>
     "precommit": "lint-staged",
     <%_ } _%>
@@ -143,7 +147,7 @@
     "preset": "jest-expo"
   },
   "engines": {
-    "node": ">=12.x",
+    "node": ">=14.x",
     "npm": ">=6.x"
   }
 }
