--- a/generators/app/templates/e2e/scripts/download-expo.sh.ejs
+++ b/generators/app/templates/e2e/scripts/download-expo.sh.ejs
@@ -18,6 +18,10 @@ if [ ! -d $APP_PATH ]; then
 
   # query expo.io to find most recent ipaUrl
   IPA_URL=`curl --silent --show-error https://expo.io/--/api/v2/versions | python -c 'import sys, json; print json.load(sys.stdin)["iosUrl"]'`
+  echo 'IPA: ${IPA_URL}'
+
+  # hardcode because above logic isn't working
+  IPA_URL='https://dpq5q02fu5f55.cloudfront.net/Exponent-2.25.1.tar.gz'
 
   # download tar.gz
   TMP_PATH=./exponent.tar.gz
