Add docs about jq [skip ci]

--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -73,6 +73,9 @@ To run the e2e tests:
 ```bash
 npm run test:e2e
 ```
+
+You will need to have [`jq`](https://stedolan.github.io/jq/download/) installed for this command to work.
+
 <%_ } _%>
 ## Tips
 
