--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "apisauce": "REPLACE_WITH_VERSION",
+    "expo-image-picker": "REPLACE_WITH_VERSION",
     "format-json": "REPLACE_WITH_VERSION",
     "identity-obj-proxy": "REPLACE_WITH_VERSION",
     "lodash": "REPLACE_WITH_VERSION",
