Add logging and more retries for detox

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -16,7 +16,7 @@
     <%_ } _%>
     <%_ if (context.detox) { _%>
     "start:e2e": "expo start --no-dev --minify",
-    "test:e2e": "./e2e/scripts/setup.sh && detox test --configuration ios.sim.release --retries 3",
+    "test:e2e": "./e2e/scripts/setup.sh && detox test --configuration ios.sim.release --retries 3 --loglevel trace",
     <%_ } _%>
     "postinstall": "patch-package",
     "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\""
