Add configuration for Android

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -6,7 +6,14 @@
       "device": {
         "type": "iPhone 12"
       }
-    }
+    },
+    "android.emu.release" {
+      "binaryPath": "e2e/Exponent.apk",
+      "type": "android.emulator",
+      "device": {
+        "avdName": "Pixel_5"
+      }
+    },
   },
   "artifacts": {
     "rootDir": ".artifacts",
