--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -7,7 +7,7 @@
         "type": "iPhone 12"
       }
     },
-    "android.emu.release" {
+    "android.emu.release": {
       "binaryPath": "e2e/Exponent.apk",
       "type": "android.emulator",
       "device": {
